--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
