--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "data_visualization",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,7 +14,10 @@
     "@types/react-grid-layout": "^1.3.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cryptr": "^6.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.408.0",
+    "net": "^1.0.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "postgres": "^3.4.4",
