Fixed refresh token logic and added refresh env

--- a/.env.local-example
+++ b/.env.local-example
@@ -2,5 +2,7 @@ POSTGRES_URL='usuario:contraseña@host:puerto/nombre_base_de_datos'
 KEYCLOAK_CLIENT_ID='Client ID de Keycloak'
 KEYCLOAK_CLIENT_SECRET='Secreto de cliente de Keycloak'
 KEYCLOAK_ISSUER='Url al realm de Keycloak'
+KEYCLOAK_END_SESSION_URL='Url de logout de Keycloak'
+KEYCLOAK_REFRESH_TOKEN_URL='Url de refresco de token de Keycloak'
 NEXTAUTH_URL='Url de la aplicación'
 NEXTAUTH_SECRET='Secreto de NextAuth'
